--- a/MusicShopWebApp/MusicShopWebApp/Views/_ViewImports.cshtml
+++ b/MusicShopWebApp/MusicShopWebApp/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using MusicShop_WebApp
-@using MusicShop_WebApp.Models
+﻿@using MusicShopWebApp
+@using MusicShopWebApp.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
