--- a/MusicShopWebApp/MusicShopWebApp/Views/Product/Index.cshtml
+++ b/MusicShopWebApp/MusicShopWebApp/Views/Product/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<MusicShopWebApp.Models.Product.ProductIndexVM>
+﻿@using MusicShopWebApp.Models.Order;
+@model IEnumerable<MusicShopWebApp.Models.Product.ProductIndexVM>
 
 @{
     ViewData["Title"] = "Index";
@@ -52,6 +53,10 @@
             <th>
                 @Html.DisplayNameFor(model => model.Discount)
             </th>
+            @if (this.User.Identity.IsAuthenticated)
+            {
+                <th>Order</th>
+            }
             <th></th>
         </tr>
     </thead>
@@ -89,6 +94,15 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Discount)
             </td>
+                @if (this.User.Identity.IsAuthenticated)
+                {
+                    <td>
+                        @await Html.PartialAsync("_OrderPartialView", new OrderConfirmVM
+                {
+                ProductId=item.Id
+                })
+                    </td>
+                }
             <td>
                     @if ((this.User.Identity.IsAuthenticated) && (this.User.IsInRole("Administrator")))
                     {
