--- a/MusicShopWebApp/MusicShopWebApp/Views/Shared/_Layout.cshtml
+++ b/MusicShopWebApp/MusicShopWebApp/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Product</a>
+                        </li>
                         @if ((this.User.Identity.IsAuthenticated) && (this.User.IsInRole("Administrator")))
                         {
 
@@ -37,6 +40,7 @@
                                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                                         <a class="dropdown-item" asp-controller="Client" asp-action="Index">Clients</a>
                                         <a class="dropdown-item" asp-controller="Order" asp-action="Index">Orders</a>
+                                        <a class="dropdown-item" asp-controller="Statistics" asp-action="Index">Statistics</a>
                                     </div>
                                 </div>
                             </li>
